kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: modresorts-service
  namespace: modresorts
  labels:
    app: modresorts
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: modresorts
